quiz-app-helm/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: practica
spec: {}
status: {}
