quiz-app-helm/templates/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quiz-app
  name: quiz-app-serviceapp
  namespace: practica
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: quiz-app
  type: LoadBalancer
