quiz-app-helm/templates/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quiz-app-service
  name: quiz-app-service
  namespace: practica
spec:
  ports:
  - port: 27017
  selector:
    app: quiz-app-db
  clusterIP: None
